# LLM-Reasoning-Router

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_15_0001-initial_schema.py
src/: config.py  dependencies.py  main.py
src/analyzer/: constants.py  schemas.py  service.py  signals.py
src/api/: schemas.py
src/api/v1/: analyze.py  chat.py  health.py  metrics.py  router.py
src/db/: base.py  session.py
src/escalation/: schemas.py  service.py  strategies.py
src/llm/: client.py  exceptions.py  schemas.py
src/metrics/: models.py  repository.py  schemas.py  service.py
src/quality/: detectors.py  schemas.py  service.py
src/router/: schemas.py  service.py  strategies.py
static/: app.js  index.html  styles.css
tests/: conftest.py
tests/fixtures/: sample_prompts.py
tests/unit/: test_analyzer.py
